metodos da classe Integer